--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ p {
     padding:0;}
 
 
-.container {
+.container{
     width: 1200px;
     padding: 0 15px;
     align-items: center;
@@ -36,18 +36,18 @@ p {
     }
 
 /* HEADER */ 
-.header-main .container {
+.header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     }
 
-.navigation { 
+.navigation{ 
     display: flex;
     align-items: center;
     } 
 
-.navigation-list {
+.navigation-list{
     display: flex;
     align-items: center;
     }
@@ -68,7 +68,7 @@ p {
        font-size: 26px;
        text-decoration: none;
      }
-.logo-dizajn {
+.logo-dizajn{
     font-family: var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
@@ -94,13 +94,13 @@ p {
 .navigation-list-link:hover,
 .navigation-list-link:focus {color: var(--main-color);}
 
-.address {
+.header.address {
     display: flex;
     margin-left: auto;
     margin-right: 50px;
 }
 
-.address-mail, .address-phone {
+.address-mail .address-phone {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -118,7 +118,16 @@ p {
  
 /* MAIN */
 /* hero*/
-.hero-side {background-color: var(--color-backgroudn);}
+.hero {background-color: var(--color-backgroudn);
+       padding-top: 200px;
+       padding-bottom: 210px;
+}
+.hero .container {
+    max-width: 696px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
 .main-header{
     font-family: var(--secondary-font);
     font-weight: 900;
@@ -127,6 +136,7 @@ p {
     line-height: 1.3636;
     letter-spacing: 6%;
     color: var(--white);
+    margin-bottom: 40px;
 }
 .modal-btn{
     font-family: var(--secondary-font);
@@ -137,6 +147,14 @@ p {
     letter-spacing: 6%;
     color: var(--white); 
     background-color: var(--main-color);
+    display: block;
+    box-shadow: 0px 4px 4px rgba(0,0,0, 0.15);
+    border-style: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 10px 41px 10px 42px;
+    margin-right: auto;
+    margin-left: auto;
 }
 /* end hero*/
 /* agencja*/
