--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,13 @@ img{
     padding: 0 15px;
     align-items: center;
     margin: 0 auto;
+    justify-content: center;
     }
+
+.section {
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
 
     
 /* HEADER */ 
@@ -46,6 +52,8 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+
     }
 
 .navigation{ 
@@ -170,7 +178,7 @@ img{
     border-style: none;
     border-radius: 4px;
     cursor: pointer;
-    padding: 10px 41px 10px 42px;
+    padding: 10px 41px 10px 41px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -211,10 +219,14 @@ img{
 
 /* end agencja*/
 /*portfolio*/
-.portfolio-list{list-style: none;}
+.portfolio-list{
+   list-style: none;
+   margin-bottom: 94px;
+}
 
 .portfolio {
     display: flex;
+
 }
 .portfolio .portfolio-list {
     display: flex;
@@ -229,7 +241,7 @@ img{
     letter-spacing: 3%;
     color: var(--main-black);
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   
 }
 /* end portfolio*/
@@ -238,13 +250,13 @@ img{
 
 .contact{
     display: flex;
-    background-color: #f5f4fa;}
+    background-color: var(--btn-backround);}
 
 .contact .contact-list {
     display: flex;
     justify-content: space-between;
 }
-.contact-list-item {background-color: #ffffff;}
+.contact-list-item {background-color: var(--white);}
 
 .contact .container {margin-top: 100px;}
 
@@ -309,7 +321,8 @@ padding-bottom: 60px;}
 
 /*porfolio*/
 
-.btn-list{list-style: none;}
+.btn-list{list-style: none;
+    }
 
 .btn-list-text{
     font-family: var(--main-font);
@@ -320,28 +333,36 @@ padding-bottom: 60px;}
     letter-spacing: 3%;
     color: var(--black); 
     background-color: var(--btn-backround);
+    border-style: none;
+    border-radius: 4px;
+    text-align: center;
+    padding: 6px 22px;
 }
 
 .porfolio-btn {
     margin-bottom: 94px;
     margin-top: 94px;
-}
-.btn-list {margin-bottom: 50px;
-display: flex;
-justify-content: center;}
 
-.btn-list-item {
-    text-align: center;
-    border-style: none;
-    border-radius: 4px;
-    padding: 6px 22px;
 }
+.btn-list {
+margin-bottom: 50px;
+display: flex;
+justify-content: center;
+}
+
+.btn-list-item :not(last-child) {
+    margin-right: 8px;
+}
+
+
+
 
 .btn-list-text:hover,
 .btn-list-text:focus{
     background-color: var(--main-color);
     color: var(--white);
     cursor: pointer;
+    border-style: none;
 }
 .main-list{
     list-style: none;
