--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,8 @@ img{
     margin-left: auto;
     margin-right: 50px;
 }
+.address {margin-bottom: 20px;}
+
 .address-mail {
     margin-right: 41px ;
 }
