--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid var(--border-color);
     }
 
 .navigation{ 
@@ -385,7 +386,6 @@ justify-content: center;
     border-bottom: 1px solid var(--border-color);
     border-left: 1px solid var(--border-color);
     border-right: 1px solid var(--border-color);
-    border-top: 1px solid var(--border-color);
     width: 370px;
     }
 
