--- a/css/style.css
+++ b/css/style.css
@@ -383,13 +383,13 @@ justify-content: center;
 .main-list-item {
     width: calc((100%/3));
     margin-top: 50px;
-    border-bottom: 1px solid var(--border-color);
+    /*border-bottom: 1px solid var(--border-color);
     border-left: 1px solid var(--border-color);
-    border-right: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color); */
     width: 370px;
     }
 
- img {margin-bottom: 20px;}
+ /*img {margin-bottom: 20px;} */
       
 .main-list-item :nth-last-child()
 {margin-right: 30px;}
@@ -404,6 +404,7 @@ justify-content: center;
     color: var(--main-black);
     margin-left: 24px;
     margin-bottom: 4px;
+    margin-top: 20px;
 }
 .main-list-text{
     font-weight: 400;
@@ -414,3 +415,10 @@ justify-content: center;
     color: var(--main-grey);
     margin-left: 24px;
 }
+.border-text{
+    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    border-top: 1px solid var(--border-color);
+} 
+    
